fix: dark mode colors to body and search bar component

--- a/src/assets/styles/_tokens.scss
+++ b/src/assets/styles/_tokens.scss
@@ -17,6 +17,7 @@ $text-button-md-font-size: 1.6rem;
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 2.4rem;
+  color: var(--color-text-heading-800);
 }
 
 %text-heading-800 {
@@ -24,5 +25,6 @@ $text-button-md-font-size: 1.6rem;
   font-weight: 700;
   font-size: 2.6rem;
   line-height: 3.8rem;
+  color: var(--color-text-heading-800);
 }
 
