--- a/src/assets/styles/components/search-input.module.scss
+++ b/src/assets/styles/components/search-input.module.scss
@@ -8,14 +8,15 @@
   align-items: center;
   border-radius: 1.5rem;
   padding: .65rem .7rem .75rem 4.5rem;
+  background-color: var(--color-background-secondary);
+  box-shadow: var(--color-box-shadow-input-default);
 
   @media screen and (min-width: $sm-device) {
     padding: 1rem 1rem 1rem 8rem;
   }
 
   &:focus-within {
-    /* TODO: Move to dark mode */
-    box-shadow: inset 0 0 0 .2rem #20201d, 0 .2rem .2rem 0 rgb(12 11 8 / 20%);
+    box-shadow: var(--color-box-shadow-focus-default);
   }
 
   &::before {
@@ -51,5 +52,9 @@
     @extend %text-heading-600;
     @extend %input-reset;
     @extend %button-default;
+
+    &:focus-within {
+      box-shadow: none;
+    }
   }
 }
